Ensure an event in /home and verify that